--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
         "fmt": "prettier --write ."
     },
     "dependencies": {
-        "astro": "^1.3.0"
+        "@astrojs/react": "^1.1.4",
+        "astro": "^1.3.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
     },
     "devDependencies": {
-        "prettier": "^2.7.1"
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
+        "prettier": "^2.7.1",
+        "typescript": "^4.8.3"
     }
 }
